@@ -5,7 +5,7 @@ plugins {
 
 description = "Cross-platform code highlight engine"
 group = 'com.qiplat'
-version = '1.2.2'
+version = '1.2.4'
 
 java {
     sourceCompatibility = JavaVersion.VERSION_22
@@ -63,13 +63,9 @@ tasks.named('sourcesJar') {
     dependsOn(tasks.named('syncNativeResources'))
 }
 
-tasks.withType(JavaCompile).configureEach {
-    options.compilerArgs += ['--enable-preview']
-}
-
 test {
     useJUnitPlatform()
-    jvmArgs '--enable-preview', '--enable-native-access=ALL-UNNAMED'
+    jvmArgs '--enable-native-access=ALL-UNNAMED'
 }
 
 javadoc {
